Fix z-index of timestamp dropdown

--- a/src/scss/modules/TimestampPicker.module.scss
+++ b/src/scss/modules/TimestampPicker.module.scss
@@ -4,6 +4,8 @@
 @import '~bootstrap/scss/variables';
 
 .datepicker {
+  position: relative;
+  z-index: 3;
   margin-bottom: 1rem;
 
   .form-label {
